--- a/Archives/README
+++ b/Archives/README
@@ -13,10 +13,7 @@ $ sha1sum -c SHA1SUMS (example)
 
 --------------------------------------------------------------------------------------------------
 
-[Notes]
-
-``panel_discussion.ipa'' is a close replica to that utilized in the study.
-Exceptions are that rounding and interest computations are corrected, and the monthly balance table is restructured
+[Note]
 
 Windows Subsystem for Linux:
 $ sudo apt install dos2unix
