--- a/Archives/README
+++ b/Archives/README
@@ -1,6 +1,8 @@
 In Android phone security settings, allow installation of apps from unknown sources.
 Install each application package directly on phones running Android 4.2 (Jelly Bean) or above.
 
+Instructional App = course material + Android app
+
 --------------------------------------------------------------------------------------------------
 Optional
 
