proofread changelog and readme

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,3 @@
+Sep 17, 2019: starting signing commits, signed and re-committed old ones, inadvertently lost empty commits but they were empty anyway
 Oct 12, 2018: refreshed entire project but inadvertently purged commit history
 Sep 26, 2018 · Version 1.x: initial commit
