--- a/Archives/README
+++ b/Archives/README
@@ -21,7 +21,7 @@ Windows Subsystem for Linux: $ sha1sum -c SHA1SUMS   # example
 
 [Notes]
 
-informal_pilot_test.apk and focus_groups.apk are identical
+informal_field_test.apk and focus_groups.apk are identical
 
 If one verifies authenticity using Windows Subsystem for Linux, the terminal may output ``BAD signature.'' 
 Convert file hash to Unix format, and retry:
