--- a/Archives/README
+++ b/Archives/README
@@ -4,7 +4,7 @@ Install each application package directly on phones running Android 4.2 (Jelly B
 Instructional App = course material + Android app
 
 --------------------------------------------------------------------------------------------------
-Optional
+How to Verify Downloads
 
 Prerequisites: gnupg (https://www.gnupg.org/)
 
